fix(crdt-breakouts): hero/content spacing

--- a/src/templates/state/race-ethnicity/index.module.scss
+++ b/src/templates/state/race-ethnicity/index.module.scss
@@ -22,3 +22,7 @@
     @include type-size(400);
   }
 }
+
+.wrapper {
+  @include margin(24, top);
+}
